2006-07-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h (__INFF,__INFL): Remove '#'. 

2006-07-04  Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/Makefile.in: Add -I$(srcdir)/.. to INCLUDES.

2006-07-03  Danny Smith  <dannysmith@users.sourceforge.net>

	Support SSE float environment in fenv.h functions.  
	* cpu_features.c: New file.
	* cpu_features.h: New file.
	* crt1.c: Include "cpu_features.h".
	(__mingw_CRTStartup): Call cpu_features_init().	
	* Makefile.in (MING_OBJS): Add cpu_features.c.
	(SRCDIST_FILES): Add cpu_features.c, cpu_features.h.
	* include/fenv,h ( fenv_t;): Append  __mxcsr field.
	(__MXCSR_EXCEPT_FLAG_SHIFT): New define.
	(__MXCSR_EXCEPT_MASK_SHIFT): New define.
	(__MXCSR_ROUND_FLAG_SHIFT): New define.
	* mingwex/feclearexcept.c: Include "cpu_features.h".
	Handle SSE environment.
	* mingwex/fegetenv.c: Likewise.
	* mingwex/feholdexcept.c: Likewise.
	* mingwex/fesetenv.c: Likewise.
	* mingwex/fesetexceptflag.c: Likewise.
	* mingwex/fesetround.c: Likewise.
	* mingwex/fetestexcept.c: Likewise.
	* mingwex/feupdateenv.c: Likewise.
	* mingwex/fegetround.c: Add comment.


2006-06-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Include/_mingw.h: Increment version to 3.10.
	* Makefile.in: Ditto.

2006-06-26 Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/math/tgamma.c (SQTPI): Add braces.

2006-06-26 Danny Smith  <dannysmith@users.sourceforge.net>

	* mingwex/wcrtomb.c (wcsrtombs): Fix src end-pointer thinko.
	* mingwex/math/lgamma.c: (LOGPI) Avoid type punning.
	(LS2PI): Likewise.
        * mingwex/math/sf_erf.c (erff): Initialize z.
        (erfcf): Likewise.
	* mingwex/math/tgamma.c (SQTPI): Avoid type punning.

2006-06-25  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* Include/_mingw.h: Increment version to 3.10.
	* Makefile.in: Ditto.

2006-06-23 Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sys/time.h (struct timezone): Define.